AUTOMAKE_OPTIONS = foreign no-dependencies
bin_PROGRAMS = 2048

2048_CXXFLAGS = @AM_CXXFLAGS@

2048_SOURCES = main.cc main.h \
			   game.cc game.h \
			   cmds.cc cmds.h \
			   display.cc display.h \
			   debug.h \
			   q_trie.c q_trie.h \
			   cvar.c cvar.h \
			   glob.c glob.h \
			   prompt.c prompt.h

